admin-manifest/06-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: maily
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      serviceAccountName: job-runner-sa
      automountServiceAccountToken: true
      containers:
        - name: admin
          image: suhannugul/capstoneadmin:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "700Mi"
