admin-manifest/05-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: maily
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
